# MagnumTest

./: CMakeLists.txt  README.md
src/: MyApplication.cpp
